<?xml version="1.0" encoding="utf-8"?>
<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  >

    <data>
        <variable
            name="viewModel"
            type="com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.fragment.app.FragmentContainerView
          android:id="@+id/map"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:name="com.google.android.gms.maps.SupportMapFragment"  />

        <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/save_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/save"
          android:background="@color/colorAccent"
          android:textColor="@color/white"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
